--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
         <div class="game">
             <div class="player-options">
-                <img id="rock" src="./images/rock-paper-scissors-296854_1280.png" alt="rock">
-                <img id="paper" src="./images/rock-paper-scissors-296855_1280.png" alt="paper">
-                <img id="scissors" src="./images/rock-paper-scissors-296853_1280.png" alt="scissors">
+                <button id="rock"><img src="./images/rock-paper-scissors-296854_1280.png" alt="rock"></button>
+                <button id="paper"><img src="./images/rock-paper-scissors-296855_1280.png" alt="paper"></button>
+                <button id="scissors"><img src="./images/rock-paper-scissors-296853_1280.png" alt="scissors"></button>
             </div>
             <div class="game-information">
                 <div class="round-result">Round result</div>
                 <div class="game-result"> - </div>
             </div>
-            <img src="" id="computer-choice">
+            <img src="" class="computer-choice">
         </div>
 
         <div class="footer">
